Added calendly link

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -104,7 +104,7 @@ coordinates = {latitude = "42.319465", longitude = "-71.0426737"}
 #office_hours = ["Monday 10:00 to 13:00", "Wednesday 09:00 to 10:00"]
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-appointment_url = "https://calendly.com"
+appointment_url = "https://calendly.com/shubham8garg/meetme"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
